# duvet

./: .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  Cargo.toml  MANIFEST.in  Makefile  README.md  _typos.toml  action.yml  bandit.yaml  build.rs  duvet-audit-design-decisions.md  duvet-audit-design.md  duvet-report.html  duvet-result.json  duvet-unified-audit-decisions.md  duvet-unified-audit-design.md  duvet.toml  duvet_config.toml  duvet_report.sh  park.cfg  requirements.txt  rust-toolchain  setup.cfg  setup.py  tox.ini
duvet/: Cargo.toml
duvet-core/: Cargo.toml  README.md
duvet-core/src/: artifact.rs  cache.rs  contents.rs  diagnostic.rs  diff.rs  dir.rs  env.rs  file.rs  glob.rs  hash.rs  http.rs  lib.rs  macro_support.rs  path.rs  progress.rs  query.rs  testing.rs  vfs.rs
duvet-core/src/dir/: walk.rs
duvet-core/src/vfs/: fs.rs  mem.rs
duvet-core/tests/: line_count.rs  macros.rs
duvet-core/tests/line_count/: a.txt  b.txt  c.txt
duvet-coverage/: Cargo.toml
duvet-coverage/src/: annotation_execution.rs  classify_postpass.rs  degraded.rs  execution_propagation.rs  lib.rs  predicates.rs  proofs.rs  scopes.rs  target_resolution.rs  types.rs
duvet-macros/: Cargo.toml  README.md
duvet-macros/src/: lib.rs
duvet-wasm/: Cargo.toml
duvet-wasm/src/: lib.rs
duvet-wasm/tests/: embedder.rs
duvet-wasm/wit/: checks.wit
duvet/src/: annotation.rs  api.rs  arguments.rs  comment.rs  config.rs  convert.rs  extract.rs  ids.rs  ietf.rs  init.rs  lib.rs  main.rs  manifest.rs  mcp.rs  merge.rs  parser.rs  pattern.rs  project.rs  query.rs  reference.rs  report.rs  source.rs  sourcemap.rs  specification.rs  target.rs  tests.rs  text.rs  tracing.rs
duvet/src/comment/: parser.rs  tests.rs  tokenizer.rs
duvet/src/comment/snapshots/: duvet__comment__tests__content_without_meta.snap  duvet__comment__tests__meta_without_content.snap  duvet__comment__tests__missing_new_line.snap  duvet__comment__tests__type_citation.snap  duvet__comment__tests__type_citation_with_reason.snap  duvet__comment__tests__type_exception.snap  duvet__comment__tests__type_exception_multiline_reason.snap  duvet__comment__tests__type_implication.snap  duvet__comment__tests__type_implication_with_reason.snap  duvet__comment__tests__type_test.snap  duvet__comment__tests__type_test_with_reason.snap  duvet__comment__tests__type_todo.snap  duvet__comment__tokenizer__tests__basic.snap  duvet__comment__tokenizer__tests__configured.snap  duvet__comment__tokenizer__tests__duplicate_meta.snap  duvet__comment__tokenizer__tests__empty.snap  duvet__comment__tokenizer__tests__only_unnamed.snap  duvet__comment__tokenizer__tests__proverif_style.snap
duvet/src/config/: schema.rs  v1.rs
duvet/src/config/schema/: v0_4_0.rs
duvet/src/extract/: tests.rs
duvet/src/extract/snapshots/: duvet__extract__tests__esdk_decrypt.snap  duvet__extract__tests__esdk_encrypt.snap  duvet__extract__tests__esdk_streaming.snap  duvet__extract__tests__rfc9000.snap  duvet__extract__tests__rfc9001.snap  duvet__extract__tests__rfc9114.snap
duvet/src/ietf/: parser.rs  tokenizer.rs
duvet/src/manifest/: schema.rs
duvet/src/manifest/schema/: v1.rs
duvet/src/mcp/: server.rs  system_prompt.md
duvet/src/mcp/tests/: mod.rs
duvet/src/pattern/: tests.rs
duvet/src/pattern/snapshots/: duvet__pattern__tests__missing_new_line.snap  duvet__pattern__tests__type_citation.snap
duvet/src/query/: coverage.rs  engine.rs  requirements.rs  result.rs
duvet/src/query/checks/: coverage.rs  mod.rs
duvet/src/query/classify/: java.rs  mod.rs
duvet/src/query/coverage_model/: annotation_execution.rs  execution_propagation.rs  mod.rs  proofs.rs  scopes.rs  target_resolution.rs  types.rs
duvet/src/query/parsers/: jacoco.rs  mod.rs
duvet/src/reference/: tests.rs
duvet/src/report/: ci.rs  html.rs  json.rs  json_v1.rs  json_v2.rs  json_v2_merge.rs  json_v2_to_v1.rs  lcov.rs  mod.rs  snapshot.rs  stats.rs  status.rs  tests.rs
duvet/src/report/snapshots/: duvet__report__json_v2_to_v1__tests__converted_markdown_snapshot.snap
duvet/src/snapshots/: duvet__sourcemap__tests__lines_iter_cr_newline.snap  duvet__sourcemap__tests__lines_iter_with_trailing_newline.snap  duvet__tests__inner_whitespace.snap  duvet__tests__invalid_quote.snap  duvet__tests__invalid_section.snap  duvet__tests__markdown_report.snap  duvet__text__tests__empty.snap  duvet__text__tests__end.snap  duvet__text__tests__end_2.snap  duvet__text__tests__hyphenated_haystack.snap  duvet__text__tests__hyphenated_needle.snap  duvet__text__tests__middle.snap  duvet__text__tests__middle_2.snap  duvet__text__tests__start.snap  duvet__text__tests__start_2.snap  duvet__text__tests__ws_difference.snap
duvet/src/source/: toml.rs
duvet/src/specification/: ietf.rs  markdown.rs  mod.rs
duvet/src/specification/ietf/: break_filter.rs  parser.rs  tests.rs  tokenizer.rs
duvet/src/specification/markdown/: break_filter.rs  parser.rs  tests.rs  tokenizer.rs
duvet/src/text/: find.rs  view.rs  whitespace.rs
duvet/src/text/snapshots/: duvet__text__find__tests__empty.snap  duvet__text__find__tests__end.snap  duvet__text__find__tests__end_2.snap  duvet__text__find__tests__hyphenated_haystack.snap  duvet__text__find__tests__hyphenated_needle.snap  duvet__text__find__tests__middle.snap  duvet__text__find__tests__middle_2.snap  duvet__text__find__tests__punctuation_test.snap  duvet__text__find__tests__start.snap  duvet__text__find__tests__start_2.snap  duvet__text__find__tests__ws_difference.snap
duvet/www/: .gitignore  .prettierrc.toml  Makefile  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
duvet/www/public/: index.html
duvet/www/src/: App.js  index.js  link.js  main.css  main.dev.ts  main.prod.ts  main.tsx  nav.js  result.js  section.js  spec.js
duvet/www/src/component/: App.tsx  Body.tsx  Button.tsx  Index.tsx  Input.tsx  Link.tsx  Nav.tsx  PageTitle.tsx  Params.tsx  (+7 more)
duvet/www/test/: report.mjs
xtask/: Cargo.toml
xtask/src/: args.rs  build.rs  changelog.rs  checks.rs  guide.rs  main.rs  publish.rs  tests.rs  wasm.rs
(+560 files in other folders)
