[package]
name = "duvet"
version = "0.1.1"
description = "A code quality tool to help bound correctness."
authors = ["Cameron Bytheway <bythewc@amazon.com>", "Ryan Emery <ryanemer@amazon.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/duvet"
include = [
    "/src/**/*.rs",
    "/www/public",
]

[dependencies]
anyhow = "1"
fnv = { version = "1", default-features = false }
glob = "0.3"
lazy_static = "1"
pathdiff = "0.2"
pulldown-cmark = { version = "0.9", default-features = false }
rayon = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "native-tls"] }
serde = { version = "1", features = ["derive"] }
slug = { version = "0.1" }
structopt = "0.3"
toml = "0.5"
triple_accel = "0.4"
url = "2"
v_jsonescape = "0.7"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json = "1"
tempfile = "3"
