[workspace]
members = [
    "duvet",
    "duvet-core",
    "duvet-macros",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
# improve flamegraph information
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
