[workspace]
members = ["duvet", "duvet-core", "duvet-macros", "xtask"]
resolver = "2"

[profile.bench]
lto = true
codegen-units = 1
incremental = false
# improve flamegraph information
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.release-debug]
inherits = "dev"
opt-level = 3
