[package]
name = "duvet-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["http", "testing"]
http = ["dep:http", "reqwest"]
testing = []

[dependencies]
blake3 = "1"
bytes = "1"
duvet-macros = { version = "0.1", path = "../duvet-macros" }
futures = { version = "0.3", default-features = false }
fxhash = "0.2"
globset = "0.4"
http = { version = "1", optional = true }
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
reqwest = { version = "0.12", optional = true }
serde = "1"
tokio = { version = "1", features = ["fs", "sync"] }
tokio-util = "0.7"
toml_edit = { version = "0.22", features = ["parse", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

