[package]
name = "duvet-core"
version = "0.1.0"
description = "Internal crate used by duvet"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/duvet"

[features]
default = ["http"]
http = ["dep:http", "reqwest"]
testing = ["tracing-subscriber"]

[dependencies]
anyhow = "1"
blake3 = "1"
bytes = "1"
duvet-macros = { version = "0.1", path = "../duvet-macros" }
futures = { version = "0.3", default-features = false }
fxhash = "0.2"
globset = "0.4"
http = { version = "1", optional = true }
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
reqwest = { version = "0.12", optional = true, features = ["native-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync"] }
tokio-util = "0.7"
toml_edit = { version = "0.22", features = ["parse", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

