[package]
name = "duvet-core"
version = "0.4.1"
description = "Internal crate used by duvet"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/duvet"
rust-version = "1.85"

[features]
default = ["diff", "http"]
diff = ["dep:similar"]
http = ["dep:http", "reqwest"]
testing = ["tracing-subscriber"]

[dependencies]
blake3 = "1"
bytes = "1"
console = "0.16"
duvet-macros = { version = "0.4", path = "../duvet-macros" }
futures = { version = "0.3", default-features = false }
rustc-hash = "2.1"
globset = "0.4"
http = { version = "1", optional = true }
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
reqwest = { version = "0.12", optional = true, features = ["native-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
similar = { version = "2.6", features = ["inline"], optional = true }
tokio = { version = "1", features = ["fs", "sync"] }
tokio-util = "0.7"
toml_edit = { version = "0.23", features = ["parse", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
