[package]
name = "duvet-macros"
version = "0.4.1"
description = "Internal crate used by duvet"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/duvet"
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
darling = "0.23"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
