[package]
name = "duvet"
version = "0.3.0"
description = "A requirements traceability tool"
authors = [
    "Cameron Bytheway <bythewc@amazon.com>",
    "Ryan Emery <ryanemer@amazon.com>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/duvet"
include = ["/src/**/*.rs", "/www/public"]

[dependencies]
clap = { version = "4", features = ["derive"] }
duvet-core = { version = "0.1", path = "../duvet-core" }
futures = { version = "0.3" }
glob = "0.3"
lazy_static = "1"
mimalloc = { version = "0.1", default-features = false }
once_cell = "1"
pulldown-cmark = { version = "0.12", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_spanned = "0.6"
slug = { version = "0.1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
triple_accel = "0.4"
url = "2"
v_jsonescape = "0.7"

[dev-dependencies]
bolero = "0.12"
duvet-core = { version = "0.1", path = "../duvet-core", features = ["testing"] }
insta = { version = "1", features = ["filters", "json"] }
schemars = "0.8"
serde_json = "1"
