[package]
name = "duvet"
version = "0.4.2"
description = "A requirements traceability tool"
authors = [
    "Cameron Bytheway <bythewc@amazon.com>",
    "Ryan Emery <ryanemer@amazon.com>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/duvet"
include = ["/src/**/*.rs", "/www/public"]
default-run = "duvet"
rust-version = "1.88"

[dependencies]
clap = { version = "4", features = ["derive"] }
duvet-core = { version = "0.4", path = "../duvet-core" }
duvet-coverage = { version = "0.1", path = "../duvet-coverage" }
futures = { version = "0.3" }
glob = "0.3"
lazy_static = "1"
miette = "7"
mimalloc = { version = "0.1", default-features = false }
once_cell = "1"
pulldown-cmark = { version = "0.13", default-features = false }
quick-xml = "0.38"
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_spanned = "1.0"
slug = { version = "0.1" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.24"
tree-sitter-java = "0.23"
triple_accel = "0.4"
url = "2"
v_jsonescape = "0.7"

[dev-dependencies]
bolero = "0.13"
duvet-core = { version = "0.4", path = "../duvet-core", features = ["testing"] }
insta = { version = "1", features = ["filters", "json"] }
schemars = "1.1"
serde_json = "1"
