[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
insta = { version = "1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
xshell = "0.2"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    # xshell uses this `cfg` to make rust analyzer highlight the `cmd!` macro arguments
    'cfg(trick_rust_analyzer_into_highlighting_interpolated_bits)',
]
